# AI_poker_player_LLM

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  LICENSE  README.md  advisor.py  config_ui.py  extractor.py  front_imagem.py  image_regions.py  main.py  pipeline.py  poker_engine.py  posicao.py  preflop_engine.py  pyproject.toml  requirements.txt  screen_capture.py
docs/: PLANO_CAPTURA_TELA_ATALHO.md
